<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtView"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="Hello World!" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbtNero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FNegro" />

                <RadioButton
                    android:id="@+id/rbtVerde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FVerde" />

                <RadioButton
                    android:id="@+id/rbtRojo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FRojo" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rbtTxtBlanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBlanco" />

                    <RadioButton
                        android:id="@+id/rbtTxtAmarillo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtAmarillo" />

                    <RadioButton
                        android:id="@+id/rbtTxtAzul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtAzul" />

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <CheckBox
                        android:id="@+id/cBoxtext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtMostrar" />
                </RadioGroup>

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>